--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<button class="btn btn-success">success</button>
-<span class="fas fa-star"></span>
+<app-navbar></app-navbar>
+<h1>تست</h1>
 <router-outlet></router-outlet>
+<app-footer></app-footer>
