--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <app-navbar></app-navbar>
-<h1>تست</h1>
-<router-outlet></router-outlet>
+<div class="album py-5 bg-light">
+    <div class="container">
+        <router-outlet></router-outlet>
+    </div>
+</div>
+
 <app-footer></app-footer>
