--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -1,3 +1,12 @@
+<mat-sidenav-container>
+<mat-sidenav >
+  <p>site</p>
+</mat-sidenav>
+<mat-sidenav-content>
+  <p>content</p>
+</mat-sidenav-content>
+</mat-sidenav-container>
+
 
       <div class="row row-cols-1 row-cols-sm-3 row-cols-md-4 g-3">
         <app-card-shop *ngFor="let item of data?.result" [product]="item"></app-card-shop>
